# BitNet-Transformers

./: pyproject.toml  train_wikitext.sh
bitnet_llama/: module.py
