[tool.poetry]
name = "tritnet-transformers"
version = "0.1.0"
description = ""
authors = ["frodo821 <sakaic2003@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
transformers = "^4.38.2"
accelerate = "^0.27.2"
datasets = "^2.17.1"
sentencepiece = "^0.2.0"
protobuf = "^4.25.3"
evaluate = "^0.4.1"
scikit-learn = "^1.4.1.post1"
torch = "^2.2.1"
wandb = "^0.16.3"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
yapf = "^0.40.2"
flake8 = "^7.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.yapf]
based_on_style = "google"
column_limit = 120
indent_width = 2
continuation_indent_width = 2
split_before_closing_bracket = true
split_before_first_argument = true
dedent_closing_brackets = true
coalesce_brackets = true
